# libtag

./: .gitignore  Makefile.am  configure.ac
include/: Makefile.am
include/tag/: list.h  node.h  tag.h
src/: Makefile.am  list.c  node.c
tests/: Makefile.am  list.c  node.c  tag.c
